# rust-cookbook

./: .appveyor.yml  .gitignore  .travis.yml  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.html  README.md  SUMMARY.md.new  about.html  algorithms.html  algorithms.md.new  appveyor.yml  asynchronous.html  book.toml  build-site.sh  build.rs  cli.html  compression.html  concurrency.html  configuration.html  cryptography.html  data_structures.html  data_structures.md.new  database.html  database.md.new  datetime.html  deploy.sh  development_tools.html  encoding.html  errors.html  file.html  hardware.html  index.html  intro.html  (+59 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-links.yml  deploy-mdbook.yml  mdbook-test.yml  spellcheck.yml
algorithms/: randomness.html  sorting.html
asynchronous/: channel.html  fs.html  ftc.html  intro.html  join.html  rt.html  timeout.html
book/: index.html  print.html
book/pages/: IO.html  algorithms.html  byteorder.html  cli_parsing.html  contributing.html  error_handling_note.html  file_io.html  json.html  math.html  networking.html  rand.html  serialization.html  table_of_contents.html  toml.html
ci/: deploy.sh  dictionary.txt  install_deps.sh  lychee.toml  spellcheck.sh  test_script.sh
cli/: ansi_terminal.html  arguments.html  clap-derive.html  clap-subcommand.html  clap-validation.html  env.html
compression/: tar.html
concurrency/: actor.html  custom_future.html  parallel.html  sync.html  threads.html
configuration/: config.html  confy.html  figment.html  reload.html
crates/configuration/config/: Cargo.toml  config.toml
crates/configuration/figment/: App.toml  Cargo.toml
crates/database/sea_orm/: Cargo.toml
crates/database/sqlx/: Cargo.toml
crates/wasm/: Cargo.toml
crates/wasm_component_guest/: Cargo.toml
crates/wasm_component_host/: Cargo.toml
crates/web/: Cargo.toml  README.md  main.rs
crates/web/src/: broken.rs  lib.rs  links.rs  paginated.rs  wiki.rs
crates/web_leptos/: Cargo.toml
crates/web_leptos/data/: crates.txt
crates/web_leptos/src/: main.rs
crates/web_leptos_hydrate/: Cargo.toml
crates/web_leptos_hydrate/src/: lib.rs  main.rs
cryptography/: encryption.html  hashing.html
data_structures/: bitfield.html  collections.html
database/: postgres.html  sea_orm.html  sqlite.html  sqlx.html
datetime/: duration.html  parse.html
development_tools/: build_tools.html  debugging.html  versioning.html
development_tools/debugging/: config_log.html  log.html  tracing.html
doc/: about.html  cli.html  compression.html  datetime.html  development_tools.html  encoding.html  hardware.html  index.html  mem.html  text.html  web.html
doc/algorithms/: randomness.html  sorting.html
doc/cli/: ansi_terminal.html
doc/compression/: tar.html
doc/concurrency/: parallel.html  threads.html
doc/cryptography/: hashing.html
doc/data_structures/: bitfield.html
doc/development_tools/: debugging.html  versioning.html
doc/encoding/: complex.html  csv.html  strings.html
doc/file/: dir.html
doc/net/: server.html
doc/os/: external.html
doc/text/: string_parsing.html
doc/web/: clients.html  mime.html  url.html
docs/: algorithms.html  concurrency.html  cryptography.html  data_structures.html  database.html  errors.html  file.html  intro.html  net.html  os.html  print.html  science.html  searchindex.js
docs/cli/: arguments.html
docs/cryptography/: encryption.html
docs/database/: postgres.html  sqlite.html
docs/datetime/: duration.html  parse.html
docs/development_tools/: build_tools.html
docs/errors/: handle.html
docs/file/: read-write.html
docs/hardware/: processor.html
docs/mem/: global_static.html
docs/science/: mathematics.html
docs/text/: regex.html
docs/web/: scraping.html
encoding/: complex.html  csv.html  strings.html
errors/: combinators.html  handle.html
file/: async.html  dir.html  read-write.html  watch.html  which.html
hardware/: processor.html
mem/: actor.html  custom_future.html  global_static.html  smart_pointers.html
multimedia/: audio.html  image.html
net/: addresses.html  server.html  tcp.html  udp.html
os/: external.html
pages/: byteorder.md  json.md  monte_carlo.md  toml.md
parsing/: nom.html  pest.html  winnow.html
safety_critical/: heapless_alloc.html  no_panic.html
science/: mathematics.html
science/mathematics/: complex_numbers.html  linear_algebra.html  miscellaneous.html  statistics.html  trigonometry.html
scripts/: deploy.sh  dev.sh
src/: SUMMARY.md  about.md  algorithms.md  app.md  asynchronous.md  asyncronous.md  basics.md  build_tools.md  cli.md  cli_parsing.md  compression.md  concurrency.md  configuration.md  crossbeam.md  cryptography.md  data_structures.md  database.md  datetime.md  development_tools.md  encoding.md  error_handling_note.md  errors.md  file.md  file_io.md  hardware.md  intro.md  json.md  links.md  logging.md  main.rs  mathematics.md  mem.md  multimedia.md  net.md  network.md  os.md  parsing.md  petgraph.md  rayon.md  science.md  (+3 more)
src/algorithms/: randomness.md  sorting.md
src/asynchronous/: channel.md  ftc.md  intro.md  join.md  rt.md  timeout.md
src/asyncronous/: channel.md  fs.md  ftc.md  join.md  rt.md  timeout.md
src/cli/: ansi_terminal.md  arguments.md  clap-basic.md  clap-derive.md  clap-subcommand.md  clap-validation.md  env.md
src/compression/: gzip.md  tar.md
src/concurrency/: parallel.md  sync.md  threads.md
src/configuration/: config.md  confy.md  figment.md  reload.md
src/cryptography/: encryption.md  hashing.md
src/data_structures/: bitfield.md  collections.md  constant.md  custom.md
src/database/: postgres.md  sea_orm.md  sqlite.md  sqlx.md
src/datetime/: duration.md  parse.md
src/development_tools/: build_tools.md  debugging.md  (+2 more)
text/: regex.html  string_parsing.html
theme/: book.css  custom.css  index.hbs
wasm/: call_export.html  component.html  host_fn.html  linear_memory.html
web/: clients.html  leptos.html  mime.html  scraping.html  url.html
xtask/: README.md
(+347 files in other folders)
