[package]
name = "rust-cookbook"
version = "1.0.0"
authors = ["Brian Anderson <banderson@mozilla.com>", "Andrew Gauger <andygauge@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
publish = false
build = "build.rs"

[dependencies]
ansi_term = "0.11.0"
approx = "0.3"
base64 = "0.9"
bitflags = "1.0"
byteorder = "1.0"
cc = "1.0"
chrono = "0.4"
clap = "2.29"
crossbeam = "0.5"
crossbeam-channel = "0.3.9"
csv = "1.0"
data-encoding = "2.1.0"
env_logger = "0.5"
error-chain = "0.12"
flate2 = "1.0"
glob = "0.3"
image = "0.20"
lazy_static = "1.0"
log = "0.4"
log4rs = "0.8"
memmap = "0.7"
mime = "0.3"
nalgebra = { version = "0.16.12", features = ["serde-serialize"] }
ndarray = { version = "0.13", features = ["approx"] }
num = "0.2"
num_cpus = "1.8"
percent-encoding = "2.1"
petgraph = "0.4"
postgres = "0.17.2"
rand = "0.7.3"
rand_distr = "0.2.2"
rayon = "1.0"
regex = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json", "stream"] }
ring = "0.16.11"
rusqlite = { version = "0.22", features = ["chrono"] }
same-file = "1.0"
select = "0.4"
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4.12"
tempfile = "3.1"
threadpool = "1.6"
toml = "0.4"
tokio = { version = "0.2", features = ["full"] }
unicode-segmentation = "1.2.1"
url = "2.1"
walkdir = "2.0"

[target.'cfg(target_os = "linux")'.dependencies]
syslog = "5.0"

[build-dependencies]
skeptic = { git = 'https://github.com/andygauge/rust-skeptic'}
walkdir = "2.0"

[dev-dependencies]
skeptic = { git = 'https://github.com/andygauge/rust-skeptic'}
walkdir = "2.0"
