[package]
name = "rust-cookbook"
version = "1.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>", "Andrew Gauger <andygauge@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
publish = false
build = "build.rs"

[features]
default = []
test-rand = []

[dependencies]
ansi_term = "0.11.0"
approx = "0.3"
base64 = "0.22.1"
bitflags = "1.3.2"
byteorder = "1.0"
cc = "1.0"
chrono = "0.4"
clap = "4.5"
crossbeam = "0.8"
crossbeam-channel = "0.5"
csv = "1.0"
data-encoding = "2.1.0"
env_logger = "0.11.3"
flate2 = "1.0"
glob = "0.3"
image = "0.24"

lazy_static = "1.0"
log = "0.4"
log4rs = "0.8"
memmap = "0.7"
mime = "0.3"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ndarray = { version = "0.16", features = ["approx"] }
num = "0.4"
num_cpus = "1.16"
percent-encoding = "2.3"
petgraph = "0.6"
postgres = "0.19.7"
rand = "0.9"
rand_distr = "0.5"
rayon = "1.10"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
ring = "0.17"
rusqlite = { version = "0.32", features = ["chrono"] }
same-file = "1.0"
select = "0.6.0"

semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.14"
thiserror = "2"
anyhow = "1.0"
threadpool = "1.8"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-segmentation = "1.2.1"
url = "2.5"
walkdir = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
syslog = "5.0"

[build-dependencies]
skeptic = { git = "https://github.com/AndyGauge/rust-skeptic", branch = "rlib-patch" }
walkdir = "2.5"

[dev-dependencies]
skeptic = { git = "https://github.com/AndyGauge/rust-skeptic", branch = "rlib-patch" }
walkdir = "2.5"
