[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
mime = "0.3.17"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json", "stream"] }
select = "0.6.0"
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
